# nexus

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
docs/: REVIEW_STANDARD.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: claude.rs  editor.rs  layout.rs  mod.rs  process.rs  project.rs  service.rs  terminal.rs  watcher.rs
src-tauri/src/core/: file_watcher.rs  job_object.rs  mod.rs  process.rs
src-tauri/src/core/terminal/: config.rs  mod.rs  session.rs
src-tauri/src/database/: mod.rs
src/components/claude/: ClaudeChat.tsx  ClaudeInput.tsx  ClaudeMessage.tsx  index.ts
src/components/editor/: CodeViewer.tsx  EditorTabs.tsx
src/components/file-tree/: FileIcons.tsx  FileTree.tsx
src/components/layout/: AddServiceFormContent.tsx  MainLayout.tsx  ProjectDetail.tsx  ProjectList.tsx  ProjectListItem.tsx  ProjectModals.tsx  ResizablePanel.tsx  RestartConfirm.tsx  ServiceEditPanel.tsx  ServiceTreeEntry.tsx  StatusBar.tsx  TitleBar.tsx
src/components/terminal/: DevConsole.tsx  LogViewer.tsx  Terminal.tsx
src/components/ui/: Modal.tsx  (+5 more)
src/hooks/: useProjectDetail.ts  useProjectList.ts  useTerminalSetup.ts  useXTerm.ts
src/services/: claude.ts  editor.ts  logService.ts  service.ts  terminal.ts
src/stores/: claude.ts  editor.ts  logStore.ts  terminal.ts
src/types/: claude.ts  editor.ts  file.ts  terminal.ts
src/utils/: logFormatter.ts
