[package]
name = "nexus"
version = "0.1.0"
description = "Nexus - Development Environment Manager"
authors = ["Nexus Team"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "~0.11"
portable-pty = "~0.9"
chrono = { version = "0.4", features = ["serde"] }
which = "~7.0"
rusqlite = { version = "~0.31", features = ["bundled"] }
dirs = "~5.0"
notify = "~6.1"
uuid = { version = "1.0", features = ["v4"] }
